--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_storage: ^11.5.5
   cached_network_image: ^3.3.0
   concentric_transition: ^1.0.3
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
